--- a/examples/GSE68719/config/env_GSEApy.yaml
+++ b/examples/GSE68719/config/env_GSEApy.yaml
@@ -225,4 +225,5 @@ dependencies:
   - zeromq=4.3.5=h387f397_9
   - zlib-ng=2.3.2=hceb46e0_1
   - zstd=1.5.7=hb78ec9c_6
-prefix: /home/ubuntu/miniconda3/envs/env_RNAseq
+  - lxml
+prefix: /home/ubuntu/miniconda3/envs/env_GSEApy
